Edited wiki page Vim through web user interface.

--- a/wiki/Vim.wiki
+++ b/wiki/Vim.wiki
@@ -172,6 +172,11 @@ Use `%` as the filename. For example, to count how many words are in the file yo
 
 = Tips =
 
+== Remove ^M characters ==
+{{{
+:%s/\r//g
+}}}
+
 == Sort ==
 {{{
 :sort
