--- a/wiki/Vim.wiki
+++ b/wiki/Vim.wiki
@@ -121,6 +121,7 @@ I// <ESC>
 || Close window (if there is no other window the tab is closed) || Ctrl+W C ||
 || Close tab || `:tabc` ||
 || Close all others tabs || `:tabo` ||
+|| Duplicate buffer in new tab || Ctrl+W s Ctrl+W t ||
 
 == Navigation ==
 
