Edited wiki page Vim through web user interface.

--- a/wiki/Vim.wiki
+++ b/wiki/Vim.wiki
@@ -67,7 +67,7 @@ From normal mode:
 :set ff=unix
 }}}
 
-= Characters =
+= Edition =
 
 == Insert character by its number value ==
 {{{
@@ -75,6 +75,10 @@ From normal mode:
 }}}
 
   * [http://vimdoc.sourceforge.net/htmldoc/insert.html#i_CTRL-V_digit Reference]
+
+== Increment/Decrement ==
+|| Decrement || <C-a> ||
+|| Increment || <C-x> ||
 
 = Repetitions =
 
