Edited wiki page Console through web user interface.

--- a/wiki/Console.wiki
+++ b/wiki/Console.wiki
@@ -147,7 +147,7 @@ for f in `find -iname "[FILENAME]"`; do cat $f; done
 
 Loop over find (files edited today in the example) with files with spaces using *while read*:
 {{{
-find -type f -iname "*.py" -mtime -1 | while read f; do echo $f; done
+find -type f -iname "*.py" -mtime -1 -maxdepth 1 | while read f; do echo $f; done
 }}}
 
 References:
