--- a/wiki/Vim.wiki
+++ b/wiki/Vim.wiki
@@ -232,3 +232,4 @@ gggqG
 = Links =
   * [http://www.rayninfo.co.uk/vimtips.html Best of Vim Tips]
   * [http://items.sjbach.com/319/configuring-vim-right Configuring Vim right]
+  * [http://e-texteditor.com/blog/2010/beyond-vi Beyond vi]
