Edited wiki page Vim through web user interface.

--- a/wiki/Vim.wiki
+++ b/wiki/Vim.wiki
@@ -221,9 +221,8 @@ gggqG
 }}}
 
 = Useful plugins =
-
-== C++ completion ==
   * [http://www.vim.org/scripts/script.php?script_id=1520 OmniCppComplete] (see [http://vim.wikia.com/wiki/VimTip1608 C++ code completion] for configuration instructions).
+  * [http://www.vim.org/scripts/script.php?script_id=1697 Surround]
 
 == MiniBufExplorer ==
   * [http://fholgado.com/minibufexpl MiniBufExplorer]
