Edited wiki page Vim through web user interface.

--- a/wiki/Vim.wiki
+++ b/wiki/Vim.wiki
@@ -223,6 +223,8 @@ gggqG
 = Useful plugins =
   * [http://www.vim.org/scripts/script.php?script_id=1520 OmniCppComplete] (see [http://vim.wikia.com/wiki/VimTip1608 C++ code completion] for configuration instructions).
   * [http://www.vim.org/scripts/script.php?script_id=1697 Surround]
+  * [http://www.vim.org/scripts/script.php?script_id=2540 snipMate]
+  * [http://www.vim.org/scripts/script.php?script_id=1189 Matrix]
 
 == MiniBufExplorer ==
   * [http://fholgado.com/minibufexpl MiniBufExplorer]
