--- a/wiki/Vim.wiki
+++ b/wiki/Vim.wiki
@@ -225,9 +225,14 @@ gggqG
   * [http://www.vim.org/scripts/script.php?script_id=1520 OmniCppComplete] (see [http://vim.wikia.com/wiki/VimTip1608 C++ code completion] for configuration instructions).
   * [http://www.vim.org/scripts/script.php?script_id=1697 Surround]
   * [http://www.vim.org/scripts/script.php?script_id=2540 snipMate]
+  * [http://www.vim.org/scripts/script.php?script_id=1234 YankRing]
+  * [https://github.com/tpope/vim-repeat VimRepeat]
+  * [http://sjl.bitbucket.org/gundo.vim/ Gundo]
   * [http://www.vim.org/scripts/script.php?script_id=1189 Matrix]
 
 = Links =
   * [http://www.rayninfo.co.uk/vimtips.html Best of Vim Tips]
   * [http://items.sjbach.com/319/configuring-vim-right Configuring Vim right]
   * [http://e-texteditor.com/blog/2010/beyond-vi Beyond vi]
+  * [http://nvie.com/posts/how-i-boosted-my-vim/ How I boosted my Vim]
+  * [http://stevelosh.com/blog/2010/09/coming-home-to-vim/ Coming Home to Vim]
