--- a/wiki/Vim.wiki
+++ b/wiki/Vim.wiki
@@ -236,5 +236,4 @@ gggqG
   * [http://e-texteditor.com/blog/2010/beyond-vi Beyond vi]
   * [http://nvie.com/posts/how-i-boosted-my-vim/ How I boosted my Vim]
   * [http://stevelosh.com/blog/2010/09/coming-home-to-vim/ Coming Home to Vim]
-  * [http://www.calmar.ws/vim/256-xterm-24bit-rgb-color-chart.html 256 Terminal colors and their 24bit equivalent (or
-  similar)]
+  * [http://www.calmar.ws/vim/256-xterm-24bit-rgb-color-chart.html 256 Terminal colors and their 24bit equivalent]
