Edited wiki page Vim through web user interface.

--- a/wiki/Vim.wiki
+++ b/wiki/Vim.wiki
@@ -224,7 +224,7 @@ gggqG
   * [http://www.vim.org/scripts/script.php?script_id=2332 Pathogen] Install and unistall vim plugins easily.
   * [http://www.vim.org/scripts/script.php?script_id=1520 OmniCppComplete] (see [http://vim.wikia.com/wiki/VimTip1608 C++ code completion] for configuration instructions).
   * [http://www.vim.org/scripts/script.php?script_id=1697 Surround]
-  * [http://www.vim.org/scripts/script.php?script_id=2540 snipMate]
+  * [http://www.vim.org/scripts/script.php?script_id=2715 UltiSnip]
   * [http://www.vim.org/scripts/script.php?script_id=1234 YankRing]
   * [https://github.com/tpope/vim-repeat VimRepeat]
   * [http://sjl.bitbucket.org/gundo.vim/ Gundo]
