--- a/wiki/Console.wiki
+++ b/wiki/Console.wiki
@@ -36,6 +36,10 @@ sudo aptitude install yakuake
 || Delete until end || `CTRL+k` ||
 || Swap chars || `CTRL+t` ||
 || Swap words || `ESC, t` ||
+|| Undo || `CTRL+_` ||
+|| Execute last command || `!!` ||
+|| Execute previous one command || `!-2` ||
+|| Execute previous before that || `!-3` ||
 || Exit || `CTRL+d` ||
 
 = Working with files and directories =
