Edited wiki page Console through web user interface.

--- a/wiki/Console.wiki
+++ b/wiki/Console.wiki
@@ -245,7 +245,7 @@ sudo chroot bootstrap
 
 Setting up installation:
 {{{
-#echo "deb http://ftp.fr.debian.org/debian lenny main contrib non-free" >> /etc/apt/sources.list
+#echo "deb http://ftp.fr.debian.org/debian wheezy main contrib non-free" >> /etc/apt/sources.list
 apt-get update && apt-get dist-upgrade
 #mount -t proc proc /proc && sudo mount -t sysfs sysfs /sys
 #echo "proc /proc proc rw 0 0" >> /etc/fstab
